appId: "com.recipedia"
---

- waitForAnimationToEnd

- runFlow:
    file: "../searchInSettingsList.yaml"
    env:
      SETTINGS_SCREEN: "IngredientsSettings"
      SEARCH_QUERY: "${INGREDIENT_NAME}"
    label: "Action - Search for ${INGREDIENT_NAME} ingredient"

- assertVisible:
    id: "TagsSettings::${INGREDIENT_INDEX}::TagName"
    text: "${INGREDIENT_NAME}"
    label: "Verify ${INGREDIENT_NAME} ingredient exists in database"

- tapOn:
    id: "IngredientsSettings::${INGREDIENT_INDEX}::DeleteButton"
    label: "Open delete ingredient dialog"

- tapOn:
    id: "IngredientsSettings::ItemDialog::DeleteModal::ConfirmButton"
    label: "Confirm ingredient deletion"

- assertNotVisible:
    text: "${INGREDIENT_NAME}"
    label: "Verify ${INGREDIENT_NAME} ingredient removed from list"
