appId: "com.recipedia"
---

- runFlow:
    file: "../searchInSettingsList.yaml"
    env:
      SETTINGS_SCREEN: "IngredientsSettings"
      SEARCH_QUERY: "RecipeIngredient"
    label: "Action - Search for RecipeIngredient ingredient"

- assertVisible:
    id: "IngredientsSettings::.*::IngredientName"
    text: "RecipeIngredient"
    label: "Assert that RecipeIngredient ingredient is visible"

- tapOn:
    id: "IngredientsSettings::.*::DeleteButton"
    label: "Tap Delete button for RecipeIngredient"

- extendedWaitUntil:
    visible:
      id: "IngredientsSettings::ItemDialog::DeleteModal.*"
    timeout: 20000
    label: "Wait for dialog to appear"

- tapOn:
    id: "IngredientsSettings::ItemDialog::DeleteModal::ConfirmButton"
    label: "Tap Confirm button in confirmation dialog"

- extendedWaitUntil:
    notVisible:
      id: "IngredientsSettings::ItemDialog::DeleteModal.*"
    timeout: 20000
    label: "Wait for dialog to disappear"
