appId: "com.recipedia"
---
- tapOn:
    id: "BottomTabs::Search"
    label: "Go to Search screen via bottom tab"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "SearchScreen::RecipeCards::2::.*"
    direction: DOWN
    speed: 50
    centerElement: true
    label: "Scroll to recipe card"

- waitForAnimationToEnd

- tapOn:
    id: "SearchScreen::RecipeCards::2::.*"
    label: "Open a recipe"

- tapOn:
    id: "Recipe::BottomActionButton"
    label: "Add the recipe to the shopping list"

- runFlow:
    file: "../../../asserts/alerts/fr/addingRecipeToMenu.yaml"
    label: "Check alert is translated"
    env:
      RECIPE_NAME: "Chicken Tacos"

- tapOn:
    id: "BottomTabs::Shopping"
    label: "Go back to Shopping screen"
