appId: "com.recipedia"
---
- tapOn:
    id: "BottomTabs::Search"
    label: "Go to Search screen via bottom tab"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "SearchScreen::RecipeCards::2::.*"
    direction: DOWN
    speed: 50
    centerElement: true
    label: "Scroll to recipe card"

- waitForAnimationToEnd
- tapOn:
    id: "SearchScreen::RecipeCards::2::.*"
    label: "Open a recipe"

- extendedWaitUntil:
      visible:
          id: "Recipe::AppBar"
      timeout: 30000
      label: "Wait for recipe screen to load"

- runFlow:
    file: "../../../asserts/parameters/language/recipeReadOnly.yaml"
    label: "Check that the fixed text of a read only recipe screen are displayed in French"

- tapOn:
    id: "Recipe::AppBar::Edit"
    label: "Enter edit mode for the recipe"
- runFlow:
    file: "../../../asserts/parameters/language/recipeEdit.yaml"
    label: "Check that the fixed text of a edit recipe screen are displayed in French"

- runFlow:
    file: "../../recipe/adding/ocr/camera/openOCRCamera.yaml"
    label: "Open camera"
- runFlow:
    file: "../../../asserts/parameters/language/recipeOcr.yaml"
    label: "Check that the fixed text of a add by image recipe screen are displayed in French"
- tapOn:
    id: "Recipe::AppBar::BackButton"
    label: "Quit the recipe screen"
- runFlow:
    file: "./recipeAlerts.yaml"
    label: "Check that recipe adding alerts are translated"
