appId: "com.recipedia"
---
- tapOn:
    id: "BottomTabs::Shopping"
    label: "Go to the shopping list screen"

- runFlow:
    file: "../../../asserts/shopping/fr/assertShoppingEmpty.yaml"
    label: "Check that empty shopping list is translated in French"

- runFlow:
    file: "./addRecipeToShopping.yaml"
    label: "Add a recipe to check shopping is translated"

- runFlow:
    file: "../../../asserts/shopping/shoppingTacosTranslatedInFrench.yaml"
    label: "Check that non empty shopping list is translated in French"

- tapOn:
    id: "BottomTabs::Menu"
    label: "Go to Menu screen to remove the test recipe"

- tapOn:
    id: "MenuScreen::MenuItem::1::RemoveButton"
    label: "Remove Chicken Tacos from menu"

- runFlow:
    file: "../../../asserts/menu/fr/removedFromMenuSnackbar.yaml"
    label: "Check the French removal snackbar is shown"
