appId: "com.recipedia"
---
- tapOn:
    id: "BottomTabs::Parameters"
    label: "Navigate to Parameters screen"

- extendedWaitUntil:
    visible:
      id: "Parameters::Section::Appearance::Language::Item"
    timeout: 30000
    label: "Wait for parameters screen to load"

- tapOn:
    id: "Parameters::Section::Appearance::Language::Item"
    label: "Tap on the language item to open the language settings"

- extendedWaitUntil:
    visible:
      id: "LanguageSettings::Item::0"
    timeout: 30000
    label: "Wait for language settings to load"

- tapOn:
    id: "LanguageSettings::Item::0"
    label: "Select English language"

- extendedWaitUntil:
    visible:
      id: "Parameters::Section::Appearance::SubHeader"
    timeout: 30000
    label: "Wait for Parameters screen to reload with new language"
