appId: "com.recipedia"
env:
  RECIPE_TITLE: ""
  RECIPE_INDEX: ""
---
- scrollUntilVisible:
    element:
      id: "RecipesSettings::${RECIPE_INDEX}::DeleteButton"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to find ${RECIPE_TITLE} recipe"

- assertVisible:
    id: "RecipesSettings::${RECIPE_INDEX}::RecipeTitle"
    text: "${RECIPE_TITLE}"
    label: "Verify ${RECIPE_TITLE} recipe exists in database"

- tapOn:
    id: "RecipesSettings::${RECIPE_INDEX}::DeleteButton"
    label: "Open delete recipe dialog"

- tapOn:
    id: "RecipesSettings::ItemDialog::DeleteModal::ConfirmButton"
    label: "Confirm recipe deletion"
